--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background: rgb(57,45,10);
-    background: linear-gradient(90deg, rgba(57,45,10,0.8522759445575105) 2%, rgba(24,51,159,1) 34%, rgba(59,8,93,1) 59%);
+    background: rgb(30,226,203);
+    background: radial-gradient(circle, rgba(30,226,203,0.6561975131849616) 7%, rgba(32,134,38,0.40129555240064774) 46%);
    }
    .nav-links a {
     color: rgb(169, 71, 255);
